--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "vite": "^6.0.5",
     "tailwindcss": "^3.4.17",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "terser": "^5.31.0"
+    "postcss": "^8.4.49"
   }
 }
