--- a/package.json
+++ b/package.json
@@ -10,19 +10,27 @@
     "preview": "vite preview",
     "start": "vite"
   },
-  "keywords": ["news", "generator", "ai", "gemini", "react", "journalism"],
+  "keywords": [
+    "news",
+    "generator",
+    "ai",
+    "gemini",
+    "react",
+    "journalism"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/genai": "^0.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "@google/genai": "^0.2.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
-    "vite": "^6.0.5",
-    "tailwindcss": "^3.4.17",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49"
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.0.5",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
